--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </script>
 </head>
 
-<body class="font-manrope px-4 lg:px-32">
+<body class="font-manrope">
     <!-- Header section  -->
-    <header class="container mx-auto">
+    <header class="container mx-auto px-4 lg:px-32">
         <div class="hero min-h-screen">
             <div class="hero-content flex-col lg:flex-row lg:gap-28">
                 <div class="lg:flex-1">
@@ -73,9 +73,9 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="px-4 lg:px-32">
         <!-- Our Featured Products -->
-        <section class="container mx-auto">
+        <section class="container mx-auto my-10 lg:my-28">
             <div class="text-center">
                 <h3 class="font-extrabold text-4xl text-[#1C1C1C]">Our Featured Products</h3>
                 <p class="lg:max-w-3xl mx-auto font-medium text-base text-[#777]">There are many variations of passages
@@ -127,7 +127,7 @@
             </div>
         </section>
         <!-- Great Tea, Freshly Presented -->
-         <section class="flex gap-12 flex-col md:flex-row lg:flex-row">
+        <section class="flex gap-12 flex-col md:flex-col lg:flex-row my-10 lg:my-28">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-2 flex-1">
                 <div class="h-32 rounded-xl bg-gradient-to-r from-[#F00] from-0% to-[#FF8938] to-100% opacity-10"></div>
                 <div class="row-span-2 rounded-xl bg-[#E6A6231A] px-8 py-12 flex justify-center items-center">
@@ -142,7 +142,10 @@
                 <h3 class="font-extrabold text-5xl text-[#1C1C1C]">
                     Great Tea, Freshly Presented</h3>
                 <p class="font-medium text-base text-[#777]">
-                    The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+                    The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.
                 </p>
                 <h3 class="font-extrabold text-xl text-[#1C1C1C]">
                     Unique Taste</h3>
@@ -155,10 +158,199 @@
                     Premium Quality that makes tea more elegant and more durable when you use it.
                 </p>
             </div>
-         </section>
+        </section>
+        <!-- Meet Our Super Clients -->
+        <section
+            class="rounded-xl  flex flex-col lg:flex-row gap-12 p-6 lg:p-24 bg-gradient-to-r from-[#FF8938] from-0% to-[#F00] to-100% my-10 lg:my-28 ">
+            <div class="flex items-center flex-1">
+                <div class="space-y-6 lg:pr-28">
+                    <h3 class="font-extrabold text-2xl lg:text-5xl text-white">
+                        Meet Our Super <br>
+                        Clients
+                    </h3>
+                    <p class="font-medium text-base text-white">
+                        There are many variations of passages of Lorem Ipsum
+                        available, but the majority have suffered alteration in some form, by injected humour, or
+                        randomised
+                        words which don't look even slightly believable.
+                    </p>
+                    <button class="bg-white px-7 py-4 rounded-lg font-bold text-xl text-[#F00]" type="button">
+                        Show All
+                    </button>
+                </div>
+            </div>
+            <!-- Review continer  -->
+            <div class="relative lg:flex-1">
+                <!-- previous review  -->
+                <div class="p-8 md:p-10 lg:p-10 z-10 relative opacity-40 mb-16  rounded-lg bg-white">
+                    <img class="absolute -top-6 -left-6 bg-white border-4 rounded-full" src="images/client.png" alt=""
+                        srcset="">
+                    <p class="font-normal text-base text-[#777]">
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to
+                        treatment
+                    </p>
+                    <h3 class="mt-5 font-bold text-base text-[#1c1c1c]">
+                        Ilham Yuda
+                    </h3>
+                    <p class="font-medium text-base text-[#5D5A6F]">
+                        Businessman
+                    </p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="" srcset="">
+                    </div>
+                </div>
+                <!-- Current review  -->
+                <div class="p-8 md:p-10 lg:p-10 z-20 absolute  top-40 lg:-left-24 lg:w-[460px]  rounded-lg bg-white">
+                    <img class="absolute -top-6 -left-6 bg-white border-4 rounded-full" src="images/client.png" alt=""
+                        srcset="">
+                    <p class="font-normal text-base text-[#777]">
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to
+                        treatment
+                    </p>
+                    <h3 class="mt-5 font-bold text-base text-[#1c1c1c]">
+                        Ilham Yuda
+                    </h3>
+                    <p class="font-medium text-base text-[#5D5A6F]">
+                        Businessman
+                    </p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="" srcset="">
+                    </div>
+                </div>
+                <!-- Next review  -->
+                <div class="p-8 md:p-10 lg:p-10 z-10 relative opacity-40  rounded-lg bg-white">
+                    <img class="absolute -top-6 -left-6 bg-white border-4 rounded-full" src="images/client.png" alt=""
+                        srcset="">
+                    <p class="font-normal text-base text-[#777]">
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to
+                        treatment
+                    </p>
+                    <h3 class="mt-5 font-bold text-base text-[#1c1c1c]">
+                        Ilham Yuda
+                    </h3>
+                    <p class="font-medium text-base text-[#5D5A6F]">
+                        Businessman
+                    </p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- News & Events -->
+        <section class="container mx-auto my-10 lg:my-28">
+            <div class="text-center">
+                <h3 class="font-extrabold text-5xl text-[#1c1c1c]">
+                    News & Events
+                </h3>
+                <p class="lg:max-w-4xl mx-auto font-semibold text-base text-[#777]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable.
+                </p>
+            </div>
+            <!-- card continer -->
+            <div class="grid gap-6 mt-4 lg:mt-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- card-1  -->
+                <div class="p-5 border border-gray-300	rounded-lg">
+                    <div class=" ">
+                        <img class="lg:w-full" src="images/news-1.png" alt="" srcset="">
+                    </div>
+                    <div class="space-y-4">
+                        <p class="mt-4 font-medium text-base text-[#777]">Feb 05, 2027</p>
+                        <h2 class=" font-extrabold text-xl text-[#1c1c1c]">Collecting 8 points for discount</h2>
+                        <p class="font-medium text-base text-[#777]">There are many variations of passages of Lorem
+                            Ipsum available.</p>
+                        <h4 class="font-bold text-xl text-[#1c1c1c]">Learn More</h4>
+                    </div>
+                </div>
+                <!-- card-2  -->
+                <div class="p-5 border border-gray-300	rounded-lg">
+                    <div class=" ">
+                        <img class="lg:w-full" src="images/news-2.png" alt="" srcset="">
+                    </div>
+                    <div class="space-y-4">
+                        <p class="mt-4 font-medium text-base text-[#777]">Feb 05, 2027</p>
+                        <h2 class=" font-extrabold text-xl text-[#1c1c1c]">Collecting 8 points for discount</h2>
+                        <p class="font-medium text-base text-[#777]">There are many variations of passages of Lorem
+                            Ipsum available.</p>
+                        <h4 class="font-bold text-xl text-[#1c1c1c]">Learn More</h4>
+                    </div>
+                </div>
+                <!-- card-3  -->
+                <div class="p-5 border border-gray-300	rounded-lg">
+                    <div class=" ">
+                        <img class="lg:w-full" src="images/news-3.png" alt="" srcset="">
+                    </div>
+                    <div class="space-y-4">
+                        <p class="mt-4 font-medium text-base text-[#777]">Feb 05, 2027</p>
+                        <h2 class=" font-extrabold text-xl text-[#1c1c1c]">Collecting 8 points for discount</h2>
+                        <p class="font-medium text-base text-[#777]">There are many variations of passages of Lorem
+                            Ipsum available.</p>
+                        <h4 class="font-bold text-xl text-[#1c1c1c]">Learn More</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <!-- fotter section  -->
+    <footer
+        class=" bg-gradient-to-r from-[#FF89381A] from-0% to-[#FF00001A] to-100% text-base-content p-4 lg:px-48 lg:py-24 my-10 lg:my-28">
+        <div class="flex flex-col lg:flex-row lg:justify-between items-center lg:py-10">
+            <img src="images/Frame.png" alt="" srcset="">
+            <div class="flex justify-center items-center gap-4">
+                <p>Ready to get strated?</p>
+                <button class=" btn bg-gradient-to-r from-[#FF8938] from-0% to-[#F00] to-100% text-white" type="button">Get Started</button>
+            </div>
+        </div>
+        <div class="footer lg:flex lg:justify-between">
+            <nav>
+                <h6 class="footer-title">Quick Links</h6>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Company</h6>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Legal</h6>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <h6 class="font-semibold text-2xl text-[#1c1c1c]">Subscribe to our <br> newsletter</h6>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="join">
+                        <input type="text" placeholder="username@site.com" class="bg-[#FFEAE7] border-b border-black" />
+                        <button type="button"
+                            class="rounded-full bg-gradient-to-r from-[#FF8938] from-0% to-[#F00] to-100% p-2 text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
+                                class="size-6">
+                                <path fill-rule="evenodd"
+                                    d="M16.28 11.47a.75.75 0 0 1 0 1.06l-7.5 7.5a.75.75 0 0 1-1.06-1.06L14.69 12 7.72 5.03a.75.75 0 0 1 1.06-1.06l7.5 7.5Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="text-center mt-5">
+            <p>Copyright © - All right reserved by ACME Industries Ltd</p>
+        </div>
     </footer>
 </body>
 
