--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
     </main>
     <!-- fotter section  -->
     <footer
-        class=" bg-gradient-to-r from-[#FF89381A] from-0% to-[#FF00001A] to-100% text-base-content p-4 lg:px-48 lg:py-24 my-10 lg:my-28">
+        class=" bg-gradient-to-r from-[#FF89381A] from-0% to-[#FF00001A] to-100% text-base-content p-4 lg:px-48 lg:py-24 mt-10 lg:mt-28">
         <div class="flex flex-col lg:flex-row lg:justify-between items-center lg:py-10">
             <img src="images/Frame.png" alt="" srcset="">
             <div class="flex justify-center items-center gap-4">
@@ -346,9 +346,14 @@
                         </button>
                     </div>
                 </fieldset>
+                <div class="flex gap-6 mt-8">
+                    <img src="images/facebook.svg" alt="" srcset="">
+                    <img src="images/twitter.svg" alt="" srcset="">
+                    <img src="images/instagram.svg" alt="" srcset="">
+                </div>
             </form>
         </div>
-        <div class="text-center mt-5">
+        <div class="text-center pt-16">
             <p>Copyright © - All right reserved by ACME Industries Ltd</p>
         </div>
     </footer>
